--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "node scripts/build.js",
-    "start": "node server.js"
+    "start": "node server.js",
     "test": "jest"
   },
  
