--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "node scripts/build.js",
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest"
   },
- 
   "keywords": [
     "english",
     "learning",
@@ -19,20 +19,25 @@
   "author": "Li Xin English Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-	"serverless-http": "^3.2.0",
-    "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+	"csv-parse": "^5.5.5",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
-    "multer": "^1.4.5-lts.1"
+	"dotenv": "^16.0.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=6.9.0"
   }
 }
